# sc-cmake

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Config.h.in  main.cpp
src/MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.cpp  MathFunctions.h  mysqrt.cpp  mysqrt.h
